--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Wajly</title>
+        <title>ake6ck</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <meta name="description" content="A brief description of my website content.">
     </head>
+    <body>
+        <div id="cursorbox"></div>
+        <div class="container">
+            <header>
+                <div class="titleboxbox">
+                    <div class="titlebox">
+                        <h1 id="title">ake6ck</h1>
+                        <div class="mottoboxbox">
+                            <h2 id="subtitle">This is just</h2>
+                            <div class="mottobox">
+                                <div id="icon"></div>
+                                <h2 id="subtitle">testing</h2>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="timebox">
+                        <p id="time"></p>
+                    </div>
+                </div>
+            </header>
+            <main>
+                Something will be here eventually.
+            </main>
+        </div>
+        <script src="cursor.js"></script>
+        <script src="time.js"></script>
+    </body>
 </html>
