--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ake6ck</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
-        <meta name="description" content="A brief description of my website content.">
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+        <meta name="description" content="This is for testing.">
     </head>
     <body>
         <div id="cursorbox"></div>
@@ -31,8 +31,23 @@
             <main>
                 Something will be here eventually.
             </main>
+            <footer>
+                <!-- <div class="player">
+                    <div class="songinfo">
+                        <h2 id="songname"></h2>
+                        <h3 id="artistname"></h3>
+                    </div>
+                    <div class="controls">
+                        <button id="previous">⏮</button>
+                        <button id="playpause">⏵</button>
+                        <button id="skip">⏭</button>
+                    </div>
+                </div> -->
+            </footer>
+            <!-- <audio id="audio" preload="metadata"></audio> -->
         </div>
         <script src="cursor.js"></script>
         <script src="time.js"></script>
+        <!-- <script src="player.js"></script> -->
     </body>
 </html>
